--- a/wifidog-gateway-svn/PKGBUILD
+++ b/wifidog-gateway-svn/PKGBUILD
@@ -3,7 +3,7 @@
 pkgname=wifidog-gateway-svn
 _PKGNAME=wifidog
 pkgver=1461
-pkgrel=1
+pkgrel=2
 pkgdesc="A complete and embeddable captive portal solution for operating an open hotspot or network of hotspots while preventing abuse of their Internet connection."
 arch=('i686' 'x86_64')
 url="http://dev.wifidog.org"
@@ -28,7 +28,7 @@ build() {
   if [ -d $_svnmod/.svn ]; then
     (cd $_svnmod && svn up -r $pkgver)
   else
-    svn co $_svntrunk --config-dir ./ -r $pkgver $_svnmod
+    svn co $_svntrunk -r $pkgver $_svnmod
   fi
 
   msg "SVN checkout done or server timeout"
@@ -43,7 +43,7 @@ build() {
   #
   ./autogen.sh || return 1
   ./configure --prefix=/usr \
-              --sysconfdir=/etc \
+              --sysconfdir=/etc/${_PKGNAME} \
               --mandir=/usr/share/man || return 1
   make || return 1
 }
