--- a/foobar2000/PKGBUILD
+++ b/foobar2000/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Florian Léger <florian6 dot leger at laposte dot net>
 pkgname=foobar2000
-pkgver=1.1.2
+pkgver=1.1.4
 pkgrel=1
 pkgdesc="An advanced freeware audio player (uses Wine)."
 arch=(any)
@@ -8,18 +8,17 @@ url="http://www.foobar2000.org/"
 license=('custom')
 depends=(wine desktop-file-utils)
 makedepends=(p7zip)
-source=("http://www.free-codecs.com/download_soft.php?d=6172"
+source=("http://www.freecodecs.net/fc/foobar2000_v${pkgver}.zip"
         "LICENSE"
         ${pkgname}.sh
         "http://upload.wikimedia.org/wikipedia/en/7/7c/Foobar2000_Icon.svg"
         ${pkgname}.desktop)
 install=${pkgname}.install
-md5sums=('6616325484920a7ad708960b51103443'
+md5sums=('217f89e4aa6bf12f7290397fb5c303c4'
          '91873c4c3115bdd1afcf52c3023dc896'
          '63f65a22001873c7b765e06f6c66707f'
          'f417c64b07b55da01f06345861511386'
          '138cb528cb0cad4e2764c3c77555369c')
-                                    
 
 package() {
     # Set up the environment
