--- a/cpuminer-git/PKGBUILD
+++ b/cpuminer-git/PKGBUILD
@@ -1,18 +1,18 @@
 # Maintainer: Florian Léger <florian6 dot leger at laposte dot net>
 
 pkgname=cpuminer-git
-pkgver=20110215
+pkgver=20110302
 pkgrel=1
 pkgdesc="Multi-threaded CPU miner for bitcoin."
 arch=('i686' 'x86_64')
 url="http://yyz.us/bitcoin/"
 license=('GPLv2')
-depends=('curl' 'jansson')
+depends=('curl')
 makedepends=('git')
 source=(rc-script.cpuminer
         cpuminer.conf)
 backup=(etc/conf.d/cpuminer.conf etc/cpuminer.json)
-md5sums=('a014ba1a7ea4240c585be90822db9315'
+md5sums=('b50db28641e7dd4554096639f19215b8'
          '96ee832cea2ff946bb890669cc7d34a0')
 
 _gitroot="http://github.com/jgarzik/cpuminer.git"
@@ -35,6 +35,8 @@ build() {
   rm -rf "$srcdir/$_gitname-build"
   git clone "$srcdir/$_gitname" "$srcdir/$_gitname-build"
   cd "$srcdir/$_gitname-build"
+  # Use in-tree jansson since it is not compatible with jansson 2.0
+  sed -e 's/^AC_CHECK_LIB(jansson, json_loads, request_jansson=false, request_jansson=true)$/request_jansson=true/' -i configure.ac
   ./autogen.sh || return 1
   # Here you may want to use custom CFLAGS
   #export CFLAGS="-O2 -march=native -mtune=native -msse2"
