--- a/xulrunner-oss-kde-opensuse/PKGBUILD
+++ b/xulrunner-oss-kde-opensuse/PKGBUILD
@@ -1,8 +1,9 @@
+# Maintainer: Florian Léger <florian6 dot leger at laposte dot net>
 # Contributor: Weng Xuetian <wengxt@gmail.com>
 
 pkgname=xulrunner-oss-kde-opensuse
-pkgver=1.9.2.14
-_ffoxver=3.6.14
+pkgver=1.9.2.15
+_ffoxver=3.6.15
 pkgrel=1
 pkgdesc="Mozilla Runtime Environment compiled with OSS support and with OpenSUSE patch, integrates better with KDE"
 arch=('i686' 'x86_64')
@@ -30,7 +31,8 @@ source=(http://releases.mozilla.org/pub/mozilla.org/firefox/releases/${_ffoxver}
         gecko-lockdown.patch
         mozilla-kde.patch
 		)
-md5sums=('ab0d00cd33e6b2388429dda1c01abd01'
+
+md5sums=('fcf8042948d91f1f3d9c33599b79cf35'
          '5655570cc09b650af2e9fb4dc05bd4ab'
          'd839d1c4ef736e6d89ccf91b23b965a4'
          '63eee2d1da3b43c9d604f2253f242f40'
@@ -45,6 +47,8 @@ md5sums=('ab0d00cd33e6b2388429dda1c01abd01'
          '746eb01d9411a49af494690615d9a0c0'
          'a0778fea18840758123fce06c64b02af'
          'f4161608d91cc0b43e256b749dbe32c7')
+
+
 build() {
   cd "${srcdir}/mozilla-1.9.2"
   cp "${srcdir}/mozconfig" .mozconfig
