cpuminer-git: add yasm as makedapend to enable the new SSE2 code

--- a/cpuminer-git/PKGBUILD
+++ b/cpuminer-git/PKGBUILD
@@ -1,14 +1,14 @@
 # Maintainer: Florian Léger <florian6 dot leger at laposte dot net>
 
 pkgname=cpuminer-git
-pkgver=20110302
+pkgver=20110315
 pkgrel=1
 pkgdesc="Multi-threaded CPU miner for bitcoin."
 arch=('i686' 'x86_64')
 url="http://yyz.us/bitcoin/"
 license=('GPLv2')
 depends=('curl')
-makedepends=('git')
+makedepends=('git' 'yasm')
 source=(rc-script.cpuminer
         cpuminer.conf)
 backup=(etc/conf.d/cpuminer.conf etc/cpuminer.json)
