xulrunner-oss-kde-opensuse-1.9.2.15-2: add mozilla-notify.patch from extra

--- a/xulrunner-oss-kde-opensuse/PKGBUILD
+++ b/xulrunner-oss-kde-opensuse/PKGBUILD
@@ -4,7 +4,7 @@
 pkgname=xulrunner-oss-kde-opensuse
 pkgver=1.9.2.15
 _ffoxver=3.6.15
-pkgrel=1
+pkgrel=2
 pkgdesc="Mozilla Runtime Environment compiled with OSS support and with OpenSUSE patch, integrates better with KDE"
 arch=('i686' 'x86_64')
 license=('MPL' 'GPL' 'LGPL')
@@ -23,14 +23,14 @@ source=(http://releases.mozilla.org/pub/mozilla.org/firefox/releases/${_ffoxver}
         xulrunner-png14.patch
         enable-x86_64-tracemonkey.patch
         python2.7.patch
+        mozilla-notify.patch
         mozilla-cairo-lcd.patch
         mozilla-libproxy.patch
         mozilla-nongnome-proxies.patch
         mozilla-prefer_plugin_pref.patch
         mozilla-gconf-backend.patch
         gecko-lockdown.patch
-        mozilla-kde.patch
-		)
+        mozilla-kde.patch)
 
 md5sums=('fcf8042948d91f1f3d9c33599b79cf35'
          '5655570cc09b650af2e9fb4dc05bd4ab'
@@ -40,6 +40,7 @@ md5sums=('fcf8042948d91f1f3d9c33599b79cf35'
          '3bd0566180ad2daa32743b3ce58b2095'
          'cbd938cd1fb8210cd8a2c41833489af9'
          'ab3dc9aecae7f08b9492fb3c00a5fd28'
+         '7d411e5c7476e73d2a4419e41dad9f44'
          'c0c8857a90daabf8fc08ffb491969971'
          'ee3cc5c1b08720a2832ced0f88be2ffe'
          'ea37f26534d1bab452da7945695e2b32'
@@ -111,6 +112,8 @@ build() {
 
   #python2.7
   patch -Np0 -i "${srcdir}/python2.7.patch"
+  
+  patch -Np2 -i "${srcdir}/mozilla-notify.patch"
 
   unset CFLAGS
   unset CXXFLAGS
