foobar2000-1.1.5-2: new icon

--- a/foobar2000/PKGBUILD
+++ b/foobar2000/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Florian Léger <florian6 dot leger at laposte dot net>
 pkgname=foobar2000
 pkgver=1.1.5
-pkgrel=1
+pkgrel=2
 pkgdesc="An advanced freeware audio player (uses Wine)."
 arch=(any)
 url="http://www.foobar2000.org/"
@@ -11,13 +11,13 @@ makedepends=(p7zip)
 source=("http://www.freecodecs.net/fc/foobar2000_v${pkgver}.zip"
         "LICENSE"
         ${pkgname}.sh
-        "http://upload.wikimedia.org/wikipedia/en/7/7c/Foobar2000_Icon.svg"
+        "http://upload.wikimedia.org/wikipedia/en/f/f9/Foobar2000_Icon.png"
         ${pkgname}.desktop)
 install=${pkgname}.install
 md5sums=('65d031a69726ce037f37a4d29b636e45'
          '91873c4c3115bdd1afcf52c3023dc896'
          '63f65a22001873c7b765e06f6c66707f'
-         'f417c64b07b55da01f06345861511386'
+         '927c185d2f680b44faf1a47f528905c7'
          '138cb528cb0cad4e2764c3c77555369c')
 
 package() {
@@ -54,7 +54,7 @@ package() {
     install -D -m755 "${srcdir}/${pkgname}.sh" "${pkgdir}/usr/bin/${pkgname}" || return 1
 
     # Install the icon
-    install -D -m644 "${srcdir}/Foobar2000_Icon.svg" "${pkgdir}/usr/share/icons/${pkgname}.svg" || return 1
+    install -D -m644 "${srcdir}/Foobar2000_Icon.png" "${pkgdir}/usr/share/icons/${pkgname}.png" || return 1
 
     # Install the .desktop
     install -D -m644 "${srcdir}/${pkgname}.desktop" "${pkgdir}/usr/share/applications/${pkgname}.desktop" || return 1
