ashd-0.7-1: new upstream release, fixed default configuration path, change ashd.conf syntax

--- a/ashd/PKGBUILD
+++ b/ashd/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Florian Léger <florian6.leger@laposte.net>
 pkgname=ashd
-pkgver=0.6
+pkgver=0.7
 pkgrel=1
-pkgdesc="A Sane HTTP daemon."
+pkgdesc="A Sane HTTP Daemon."
 arch=(i686 x86_64)
 url="http://www.dolda2000.com/~fredrik/ashd/"
 license=('GPL')
@@ -10,28 +10,33 @@ source=(http://www.dolda2000.com/~fredrik/${pkgname}/${pkgname}-${pkgver}.tar.gz
         ashd
         ashd.conf)
 depends=(gnutls file)
-md5sums=('7a3dffe5368b4120efa7125f7f9a6384'
-         '6ed33e72b383690197794729803385aa'
-         'f928fe34c998b7face9c4a1f4656b586')
+md5sums=('1050799ca8c423541be201eec991c7e8'
+         '5611d757b7d4695e721f5cc3600d39b1'
+         '2ee675c226fa5396bb65fad1b0035e50')
 
-backup=(etc/conf.d/ashd.conf)
-options=('emptydirs')
+backup=(etc/conf.d/ashd.conf etc/dirplex.rc etc/apache-compat)
+install=ashd.install
 
 build() {
   cd "$srcdir/$pkgname-$pkgver"
 
   ./configure --prefix=/usr || return 1
   make || return 1
+  
+  cd examples
+  find . -type f -exec sed -i -e 's|#!/usr/bin/python| #!/usr/bin/env python2|' "{}" \;
 }
 
 package() {
   cd "$srcdir/$pkgname-$pkgver"
 
   make DESTDIR="$pkgdir/" install || return 1
-  install -Dm644 etc/ashd/dirplex.rc "$pkgdir/etc/ashd/dirplex.rc"
-  install -Dm644 etc/ashd/apache-compat "$pkgdir/etc/ashd/apache-compat"
-  install -d "$pkgdir/etc/ashd/dirplex.d"
-  install -m644 -t "$pkgdir/etc/ashd/dirplex.d" "etc/ashd/dirplex.d/"*.rc
+  install -Dm644 etc/ashd/dirplex.rc "$pkgdir/etc/dirplex.rc"
+  install -Dm644 etc/ashd/apache-compat "$pkgdir/etc/apache-compat"
+  install -d "$pkgdir/etc/dirplex.d"
+  install -m644 -t "$pkgdir/etc/dirplex.d" "etc/ashd/dirplex.d/"*.rc
+  install -d "$pkgdir/usr/share/ashd/examples/"
+  cp -r "examples/"* "$pkgdir/usr/share/ashd/examples/"
  
   cd "$srcdir"
   install -Dm755 ashd "$pkgdir/etc/rc.d/ashd"
