--- a/ashd/ashd.conf
+++ b/ashd/ashd.conf
@@ -1,7 +1,7 @@
 #
 # Run htparser as user ASHD_USER (optionnal)
 #
-ASHD_USER=nobody
+ASHD_USER=http
 
 #
 # Change the root directory to ASHD_ROOT (optionnal)
@@ -9,21 +9,21 @@ ASHD_USER=nobody
 ASHD_ROOT=/var/empty
 
 #
-# Set htparser arguments (optionnal, see man htparser)
+# htparser argument array (optionnal, see htparser(1))
 #
-ASHD_ARGS=
+ASHD_ARGS=()
 
 #
-# Port specification (see man htparser)
+# Port specification (see htparser(1))
 #
 ASHD_PORTSPEC=plain
 
 #
-# Root handler (see man htparser)
+# Root handler (see htparser(1))
 #
 ASHD_ROOT_HANDLER=dirplex
 
 #
-# Root handler arguments (see man $ASHD_ROOT_HANDLER)
+# Root handler argument array (see $ASHD_ROOT_HANDLER's man page)
 #
-ASHD_ROOT_HANDLER_ARGS=/srv/http
+ASHD_ROOT_HANDLER_ARGS=("/srv/http")
