serenity-git: CONFDIR="/etc"

--- a/serenity-git/PKGBUILD
+++ b/serenity-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Florian Léger <florian6 dot leger at laposte dot net>
 
 pkgname=serenity-git
-pkgver=20101225
+pkgver=20110406
 pkgrel=1
 pkgdesc="Command line driven automated episode renamer."
 arch=('any')
@@ -32,11 +32,11 @@ build() {
   git clone "$srcdir/$_gitname" "$srcdir/$_gitname-build"
   cd "$srcdir/$_gitname-build"
 
-  make PREFIX="/usr" || return 1
+  make PREFIX="/usr" CONFDIR="/etc" || return 1
 }
 
 package() {
   cd "$srcdir/$_gitname-build"
-  make PREFIX="/usr" DESTDIR="$pkgdir/" install || return 1
+  make PREFIX="/usr" CONFDIR="/etc" DESTDIR="$pkgdir/" install || return 1
 }
 
