minecraft-server-beta_1.4_01-2: daemon has its dedicated user

--- a/minecraft-server/PKGBUILD
+++ b/minecraft-server/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=minecraft-server
 pkgver=beta_1.4_01
-pkgrel=1
+pkgrel=2
 epoch=1
 pkgdesc="Server for Minecraft"
 arch=(any)
@@ -13,14 +13,13 @@ depends=('java-runtime')
 
 md5sums=('40194f9c13854a803fe318b97b4f82bb'
          'cdcfd922abae8d6d6f25bdaba2774ae1'
-         'acf20964df44412493597caf67acd192')
+         'db42e85697a4b87ecc510c16fef28674')
 
 source=(minecraft-server http://minecraft.net/download/minecraft_server.jar minecraft-server-rc)
 options=(emptydirs)
+install=minecraft-server.install
 
 package() {
-  cd "$srcdir" || return 1
-
   install -Dm755 "$srcdir/minecraft-server" "$pkgdir/usr/bin/minecraft-server"
   install -Dm644 "$srcdir/minecraft_server.jar" "$pkgdir/usr/share/java/minecraft-server/minecraft-server.jar"
 
