minecraft-server-beta_1.5-1: new upstream release

--- a/minecraft-server/PKGBUILD
+++ b/minecraft-server/PKGBUILD
@@ -2,8 +2,8 @@
 # Contributor: Vic Demuzere <vic@demuzere.be>
 
 pkgname=minecraft-server
-pkgver=beta_1.4_01
-pkgrel=2
+pkgver=beta_1.5
+pkgrel=1
 epoch=1
 pkgdesc="Server for Minecraft"
 arch=(any)
@@ -12,7 +12,7 @@ url="http://www.minecraft.net/"
 depends=('java-runtime')
 
 md5sums=('40194f9c13854a803fe318b97b4f82bb'
-         'cdcfd922abae8d6d6f25bdaba2774ae1'
+         '3e20218300c995effa5b1fdd3b9c74e2'
          'db42e85697a4b87ecc510c16fef28674')
 
 source=(minecraft-server http://minecraft.net/download/minecraft_server.jar minecraft-server-rc)
