--- a/serieswatcher/PKGBUILD
+++ b/serieswatcher/PKGBUILD
@@ -1,18 +1,16 @@
 # Maintainer: Florian Léger <florian6 dot leger at laposte dot net>
 
 pkgname=serieswatcher
-pkgver=0.1.2
+pkgver=0.1.3
 pkgrel=1
 pkgdesc='A TV series browser and tracker application.'
 arch=('i686' 'x86_64')
 url='http://xf.iksaif.net/dev/serieswatcher.html'
 license=('GPL')
-depends=('qttvdb' 'libzip' 'quazip')
+depends=('openssl' 'qttvdb>=0.1' 'libzip' 'quazip')
 makedepends=('cmake')
-source=("http://xf.iksaif.net/dev/${pkgname}/${pkgname}-${pkgver}.tar.bz2"
-        "${pkgname}.desktop")
-md5sums=('ffbc0971293b09647a852f36d014d630'
-         '2f2a1876e39044c3ef16303da9684430')
+source=("http://xf.iksaif.net/dev/${pkgname}/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('1c15277b4f54222be8fa04dd5021fc9d')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
@@ -27,8 +25,5 @@ package() {
   cd "${srcdir}/${pkgname}-${pkgver}/build"
 
   make DESTDIR="${pkgdir}" install || return 1
-
-  install -Dm644 "${srcdir}/${pkgname}-${pkgver}/res/${pkgname}.png" "${pkgdir}/usr/share/icons/${pkgname}.png"
-  install -Dm644 "${srcdir}/${pkgname}.desktop" "${pkgdir}/usr/share/applications/${pkgname}.desktop"
 }
 
