--- a/foobar2000/PKGBUILD
+++ b/foobar2000/PKGBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Florian Léger <florian6 dot leger at laposte dot net>
 pkgname=foobar2000
-pkgver=1.1.5
-pkgrel=2
+pkgver=1.1.6
+pkgrel=1
 pkgdesc="An advanced freeware audio player (uses Wine)."
-arch=(any)
+arch=(i686 x86_64)
 url="http://www.foobar2000.org/"
 license=('custom')
 depends=(wine desktop-file-utils)
@@ -14,7 +14,7 @@ source=("http://www.freecodecs.net/fc/foobar2000_v${pkgver}.zip"
         "http://upload.wikimedia.org/wikipedia/en/f/f9/Foobar2000_Icon.png"
         ${pkgname}.desktop)
 install=${pkgname}.install
-md5sums=('65d031a69726ce037f37a4d29b636e45'
+md5sums=('f2e238702115a9a8351cca4570cfb4b6'
          '91873c4c3115bdd1afcf52c3023dc896'
          '63f65a22001873c7b765e06f6c66707f'
          '927c185d2f680b44faf1a47f528905c7'
