--- a/xulrunner-oss-kde-opensuse/PKGBUILD
+++ b/xulrunner-oss-kde-opensuse/PKGBUILD
@@ -4,8 +4,8 @@
 # Based on xulrunner-oss and xulrunner-kde-opensuse
 
 pkgname=xulrunner-oss-kde-opensuse
-pkgver=2.0
-_ffoxver=4.0
+pkgver=2.0.1
+_ffoxver=4.0.1
 pkgrel=1
 pkgdesc="Mozilla Runtime Environment with OSS support and OpenSUSE patch, integrates better with KDE"
 arch=('i686' 'x86_64')
@@ -22,19 +22,21 @@ source=(http://releases.mozilla.org/pub/mozilla.org/firefox/releases/${_ffoxver}
         xulrunner-omnijar.patch
         idldir.patch
         mozilla-nongnome-proxies.patch
+        mozilla-gcc46.patch
         mozilla-kde.patch
         oss.patch
 )
 options=('!emptydirs')
 
-md5sums=('3468a2c463b4fc2788ba621e4b511c30'
+md5sums=('9abda7d23151e97913c8555a64c13f34'
          '7625b2f0bd4bc86e93cd1388456dd6c7'
          '639ea80e823543dd415b90c0ee804186'
          'a0236f6c3e55f60b7888d8cf137ff209'
-         'dea8c2a57a588bf5f6198ce7b4155655'
+         '0bf82bc6677e3ce57fd20a147fe8d7b1'
          '54aace328c9b95d9549dd01e75422fb4'
          'ea37f26534d1bab452da7945695e2b32'
-         '12b98813187ce9912de42b49713087ab'
+         '3747e1fbede28b59302f72d099911baf'
+         '28b32d439df94f99a553424c101a113c'
          '81032ce49c2a5ac15d62155bcc42d3ed')
 
 build() {
@@ -73,8 +75,13 @@ build() {
   msg "patch mozilla-kde"
   patch -Np1 -i "${srcdir}/mozilla-kde.patch" || return 1
 
+  msg "patch mozilla-gcc46"
+  patch -Np1 -i "${srcdir}/mozilla-gcc46.patch" || return 1
+  
   unset CFLAGS
   unset CXXFLAGS
+
+  export CXXFLAGS="-fpermissive"
 
   make -j1 -f client.mk build MOZ_MAKE_FLAGS="$MAKEFLAGS"
 }
