dt-driver-1.1-3: gzipped module, install simplification

--- a/dt-driver/PKGBUILD
+++ b/dt-driver/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=dt-driver
 pkgver=1.1
-pkgrel=2
+pkgrel=3
 pkgdesc="ENAC's Linux kernel driver for DiamondTouch."
 arch=('i686' 'x86_64')
 url='http://lii-enac.fr/en/projects/shareit/linux.html'
@@ -19,8 +19,9 @@ build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
   patch -p2 -i "${srcdir}/${pkgname}-fix-kmalloc.patch" || return 1
   make || return 1
+  gzip -c "${srcdir}/${pkgname}-${pkgver}/diamondtouch.ko" > "${srcdir}/${pkgname}-${pkgver}/diamondtouch.ko.gz"
 }
 
 package() {
-  install -D -m644 "${srcdir}/${pkgname}-${pkgver}/diamondtouch.ko" "${pkgdir}/lib/modules/$(uname -r)/kernel/drivers/input/touchscreen/diamondtouch.ko" || return 1
+  install -D -m644 "${srcdir}/${pkgname}-${pkgver}/diamondtouch.ko.gz" "${pkgdir}/lib/modules/$(uname -r)/kernel/drivers/input/touchscreen/diamondtouch.ko.gz" || return 1
 }
