minecraft-server-beta_1.6.4-1: new upstream release

--- a/minecraft-server/PKGBUILD
+++ b/minecraft-server/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Vic Demuzere <vic@demuzere.be>
 
 pkgname=minecraft-server
-pkgver=beta_1.5_02
+pkgver=beta_1.6.4
 pkgrel=1
 epoch=1
 pkgdesc="Server for Minecraft"
@@ -11,11 +11,11 @@ license=('custom')
 url="http://www.minecraft.net/"
 depends=('java-runtime')
 
-md5sums=('40194f9c13854a803fe318b97b4f82bb'
-         'edbcec2e58bd5a03954ba7d745dee604'
+md5sums=('cbde8d4ef59494f488c472b33e711491'
+         '40194f9c13854a803fe318b97b4f82bb'
          'db42e85697a4b87ecc510c16fef28674')
 
-source=(minecraft-server http://minecraft.net/download/minecraft_server.jar minecraft-server-rc)
+source=(http://minecraft.net/download/minecraft_server.jar minecraft-server minecraft-server-rc)
 options=(emptydirs)
 install=minecraft-server.install
 
