python2-aeidon-0.18-1: new upstream release

--- a/python2-aeidon/PKGBUILD
+++ b/python2-aeidon/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=python2-aeidon
 _appname=gaupol
-pkgver=0.17.2
+pkgver=0.18
 pkgrel=1
 pkgdesc="Python package for reading, writing and manipulating text-based subtitle files"
 arch=('any')
@@ -13,9 +13,9 @@ makedepends=('python2-distribute' 'gettext' 'intltool')
 optdepends=('python2-chardet: character encoding detection'
             'pyenchant: spell-checking'
             'iso-codes: translate language and country codes for spell-checker')
-source=(http://download.gna.org/$_appname/0.17/$_appname-$pkgver.tar.gz)
+source=(http://download.gna.org/$_appname/$pkgver/$_appname-$pkgver.tar.gz)
 conflict=("gaupol")
-md5sums=('65b8e8b787b3b1cf85229915b693b327')
+md5sums=('0cba4aae845daac3710a162ea4a33a9e')
 
 build() {
   cd "$srcdir/$_appname-$pkgver"
