--- a/foobar2000/PKGBUILD
+++ b/foobar2000/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Florian Léger <florian6 dot leger at laposte dot net>
 pkgname=foobar2000
-pkgver=1.1.6
+pkgver=1.1.7
 pkgrel=1
 pkgdesc="An advanced freeware audio player (uses Wine)."
 arch=(i686 x86_64)
@@ -8,54 +8,54 @@ url="http://www.foobar2000.org/"
 license=('custom')
 depends=(wine desktop-file-utils)
 makedepends=(p7zip)
-source=("http://www.freecodecs.net/fc/foobar2000_v${pkgver}.zip"
+source=("http://www.freecodecs.net/fc/foobar2000_${pkgver}.zip"
         "LICENSE"
         ${pkgname}.sh
         "http://upload.wikimedia.org/wikipedia/en/f/f9/Foobar2000_Icon.png"
         ${pkgname}.desktop)
 install=${pkgname}.install
-md5sums=('f2e238702115a9a8351cca4570cfb4b6'
+md5sums=('81cb7955a29ccad742f334596fc58604'
          '91873c4c3115bdd1afcf52c3023dc896'
          '63f65a22001873c7b765e06f6c66707f'
          '927c185d2f680b44faf1a47f528905c7'
          '138cb528cb0cad4e2764c3c77555369c')
 
 package() {
-    # Set up the environment
-    local tmpdir="${srcdir}/foobar2000"
-    local -A files
+  # Set up the environment
+  local tmpdir="${srcdir}/foobar2000"
+  local -A files
 
-    files=( ["/"]="foobar2000*.exe *.html *.css zlib1.dll shared.dll"
-        ["components"]="foo_*.dll"
-        ["icons"]="*.ico"
-        ["themes"]="*.fth"
-    )
-    
-    local f
-    local d
+  files=( ["/"]="foobar2000*.exe *.html *.css zlib1.dll shared.dll"
+    ["components"]="foo_*.dll"
+    ["icons"]="*.ico"
+    ["themes"]="*.fth"
+  )
 
-    mkdir -p "${tmpdir}" || return 1
+  local f
+  local d
 
-    # Extract foobar (7z x gives garbage)
-    7z e -y -o"${tmpdir}" "${srcdir}/${pkgname}_v${pkgver}.exe" || return 1
+  mkdir -p "${tmpdir}" || return 1
 
-    # Installation
-    cd "${tmpdir}"
-    for d in "${!files[@]}"; do
-          for f in ${files[$d]}; do
-                install -D -m644 "${tmpdir}/${f}" "${pkgdir}/usr/share/${pkgname}/${d}/${f}" || return 1
-          done
+  # Extract foobar (7z x gives garbage)
+  7z e -y -o"${tmpdir}" "${srcdir}/${pkgname}_v${pkgver}.exe" || return 1
+
+  # Installation
+  cd "${tmpdir}"
+  for d in "${!files[@]}"; do
+    for f in ${files[$d]}; do
+      install -Dm644 "${tmpdir}/${f}" "${pkgdir}/usr/share/${pkgname}/${d}/${f}" || return 1
     done
+  done
 
-    # Install the license
-    install -D -m644 "${srcdir}/LICENSE" "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE" || return 1
+  # Install the license
+  install -Dm644 "${srcdir}/LICENSE" "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE" || return 1
 
-    # Install the script
-    install -D -m755 "${srcdir}/${pkgname}.sh" "${pkgdir}/usr/bin/${pkgname}" || return 1
+  # Install the script
+  install -Dm755 "${srcdir}/${pkgname}.sh" "${pkgdir}/usr/bin/${pkgname}" || return 1
 
-    # Install the icon
-    install -D -m644 "${srcdir}/Foobar2000_Icon.png" "${pkgdir}/usr/share/icons/${pkgname}.png" || return 1
+  # Install the icon
+  install -Dm644 "${srcdir}/Foobar2000_Icon.png" "${pkgdir}/usr/share/pixmaps/${pkgname}.png" || return 1
 
-    # Install the .desktop
-    install -D -m644 "${srcdir}/${pkgname}.desktop" "${pkgdir}/usr/share/applications/${pkgname}.desktop" || return 1
+  # Install the .desktop
+  install -Dm644 "${srcdir}/${pkgname}.desktop" "${pkgdir}/usr/share/applications/${pkgname}.desktop" || return 1
 }
