--- a/minecraft-server/PKGBUILD
+++ b/minecraft-server/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Vic Demuzere <vic@demuzere.be>
 
 pkgname=minecraft-server
-pkgver=beta_1.6.6
+pkgver=beta_1.7.2
 pkgrel=1
 epoch=1
 pkgdesc="Server for Minecraft"
@@ -10,12 +10,12 @@ arch=(any)
 license=('custom')
 url="http://www.minecraft.net/"
 depends=('java-runtime')
-
-md5sums=('0563ccb08d4dc84634d561b7f4bea596'
+source=(http://minecraft.net/download/minecraft_server.jar
+        minecraft-server
+        minecraft-server-rc)
+md5sums=('74376a139f932b9fcfc6caea6702a362'
          '40194f9c13854a803fe318b97b4f82bb'
          'db42e85697a4b87ecc510c16fef28674')
-
-source=(http://minecraft.net/download/minecraft_server.jar minecraft-server minecraft-server-rc)
 options=(emptydirs)
 install=minecraft-server.install
 
