--- a/python2-aeidon/PKGBUILD
+++ b/python2-aeidon/PKGBUILD
@@ -3,7 +3,7 @@
 pkgname=python2-aeidon
 _appname=gaupol
 pkgver=0.19
-pkgrel=1
+pkgrel=2
 pkgdesc="Python package for reading, writing and manipulating text-based subtitle files"
 arch=('any')
 url="http://home.gna.org/gaupol"
@@ -14,7 +14,7 @@ optdepends=('python2-chardet: character encoding detection'
             'pyenchant: spell-checking'
             'iso-codes: translate language and country codes for spell-checker')
 source=(http://download.gna.org/$_appname/$pkgver/$_appname-$pkgver.tar.gz)
-conflict=("gaupol")
+conflicts=("gaupol")
 md5sums=('4f53afa966640d1b634a391328a37ac7')
 
 build() {
@@ -28,5 +28,3 @@ package() {
 
   python2 setup.py --without-gaupol install --root=$pkgdir -O1
 }
-
-# vim:set ts=2 sw=2 et:
