--- a/python2-aeidon/PKGBUILD
+++ b/python2-aeidon/PKGBUILD
@@ -2,8 +2,8 @@
 
 pkgname=python2-aeidon
 _appname=gaupol
-pkgver=0.19
-pkgrel=2
+pkgver=0.19.1
+pkgrel=1
 pkgdesc="Python package for reading, writing and manipulating text-based subtitle files"
 arch=('any')
 url="http://home.gna.org/gaupol"
@@ -13,9 +13,9 @@ makedepends=('python2-distribute' 'gettext' 'intltool')
 optdepends=('python2-chardet: character encoding detection'
             'pyenchant: spell-checking'
             'iso-codes: translate language and country codes for spell-checker')
-source=(http://download.gna.org/$_appname/$pkgver/$_appname-$pkgver.tar.gz)
+source=("http://download.gna.org/$_appname/0.19/$_appname-$pkgver.tar.gz")
 conflicts=("gaupol")
-md5sums=('4f53afa966640d1b634a391328a37ac7')
+md5sums=('291c8f3e1b28567b72bb31545a625ec8')
 
 build() {
   cd "$srcdir/$_appname-$pkgver"
