--- a/minecraft-server/PKGBUILD
+++ b/minecraft-server/PKGBUILD
@@ -2,18 +2,18 @@
 # Contributor: Vic Demuzere <vic@demuzere.be>
 
 pkgname=minecraft-server
-pkgver=beta_1.7.3
-pkgrel=3
+pkgver=beta_1.8.1
+pkgrel=1
 epoch=1
 pkgdesc="Server for Minecraft"
 arch=(any)
 license=('custom')
 url="http://www.minecraft.net/"
 depends=('java-runtime' 'expect' 'detachtty')
-source=(http://minecraft.net/download/minecraft_server.jar
+source=(http://www.minecraft.net/download/minecraft_server.jar
         minecraft-server
         minecraft-server-rc)
-md5sums=('cc263aa969f2d8621c5443a5a18897e2'
+md5sums=('0c0ed1f8198b37561971f838043838ab'
          '40194f9c13854a803fe318b97b4f82bb'
          'ffde26889f822a929afae7d5f9db32ab')
 options=(emptydirs)
