--- a/flashplayer-standalone/PKGBUILD
+++ b/flashplayer-standalone/PKGBUILD
@@ -2,24 +2,35 @@
 # Contributor: osily <ly50247@gmail.com>
 
 pkgname=flashplayer-standalone
-pkgver=10.3.181.34
+pkgver=11.0.1.152
 pkgrel=1
 pkgdesc="Macromedia standalone flash player (nonfree)"
 url="http://www.adobe.com/support/flashplayer/downloads.html"
 license="custom"
-depends=('curl' 'gtk2' 'libxdamage' 'libxt' 'nss')
-source=("http://download.macromedia.com/pub/flashplayer/updaters/10/flashplayer_10_sa.tar.gz"
+depends=('gtk2' 'libxt' 'nss' 'desktop-file-utils')
+arch=('i686' 'x86_64')
+# License matrix: http://www.adobe.com/products/eulas/
+source=("http://www.adobe.com/products/eulas/pdfs/PlatformClients_PC_WWEULA_Combined_20100108_1657.pdf"
         "gflashplayer.png"
         "flashplayer.desktop")
-arch=('i686')
-md5sums=('a315c5508d049060558b70d5654ff0c3'
+md5sums=('94ca2aecb409abfe36494d1a7ec7591d'
          'b6b218eacdb3bc2efae9292526a8cd05'
          'd2d004343a89d221a6afb8a8b725b016')
+if [ "x$CARCH" = "xi686" ]; then
+  source+=("http://fpdownload.macromedia.com/pub/flashplayer/updaters/11/flashplayer_11_sa.i386.tar.gz")
+  md5sums+=('4d7c80df0614da4cffd46b77ebfaa466')
+elif [ "x$CARCH" = "xx86_64" ]; then
+  source+=("http://fpdownload.macromedia.com/pub/flashplayer/updaters/11/flashplayer_11_sa.x86_64.tar.gz")
+  md5sums+=('84a1c53892b62756213bd730595406f1')
+fi
+conflicts=('bin32-flashplayer-standalone')
 options=(!strip)
+install="$pkgname.install"
 
-build() {
+package() {
   cd "${srcdir}"
-  install -D -m755 flashplayer "${pkgdir}/usr/bin/flashplayer" || return 1
-  install -D -m644 flashplayer.desktop "${pkgdir}/usr/share/applications/flashplayer.desktop" || return 1
-  install -D -m644 gflashplayer.png "${pkgdir}/usr/share/pixmaps/gflashplayer.png" || return 1
+  install -Dm755 flashplayer "${pkgdir}/usr/bin/flashplayer"
+  install -Dm644 flashplayer.desktop "${pkgdir}/usr/share/applications/flashplayer.desktop"
+  install -Dm644 gflashplayer.png "${pkgdir}/usr/share/pixmaps/gflashplayer.png"
+  install -Dm644 PlatformClients_PC_WWEULA_Combined_20100108_1657.pdf "$pkgdir/usr/share/licenses/$pkgname/PlatformClients_PC_WWEULA_Combined_20100108_1657.pdf"
 }
