--- a/cursed-treasure/PKGBUILD
+++ b/cursed-treasure/PKGBUILD
@@ -2,14 +2,12 @@
 
 pkgname=cursed-treasure
 pkgver=1.09.0019
-pkgrel=1
+pkgrel=2
 pkgdesc='A neat Tower Defense game with new twists (Flash game).'
-arch=('i686' 'x86_64')
+arch=('any')
 url='http://www.iriysoft.ru/projects/flash/cursed-treasure'
 license=('custom')
-depends=()
-[ "$CARCH" = i686   ] && depends=('flashplayer-standalone')
-[ "$CARCH" = x86_64 ] && depends=('bin32-flashplayer-standalone')
+depends=('flashplayer-standalone')
 _baseurl="http://iriysoft.ru/CT"
 _swf="CursedTreasure.swf"
 source=("${_baseurl}/${_swf}"
