homerun-in-berzerkland-1.0-2: arch is any

--- a/homerun-in-berzerk-land/PKGBUILD
+++ b/homerun-in-berzerk-land/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=homerun-in-berzerk-land
 pkgver=1.0
 pkgrel=2
 pkgdesc='Hit the geek and make him fly (Flash game).'
-arch=('i686' 'x86_64')
+arch=('any')
 url='http://www.berzerkstudio.com/'
 license=('unknown')
 depends=('flashplayer-standalone')
