--- a/sonny/PKGBUILD
+++ b/sonny/PKGBUILD
@@ -2,15 +2,13 @@
 
 pkgname=sonny
 pkgver=4.1
-pkgrel=1
+pkgrel=2
 pkgdesc='Fight for your zombie life in this crazy and twisted world (Flash game).'
-arch=('i686' 'x86_64')
+arch=('any')
 url='http://armorgames.com/'
 license=('custom')
 makedepends=("imagemagick")
-depends=()
-[ "$CARCH" = i686   ] && depends=('flashplayer-standalone')
-[ "$CARCH" = x86_64 ] && depends=('bin32-flashplayer-standalone')
+depends=('flashplayer-standalone')
 _baseurl="http://armorgames.com/files/games"
 _baseiconurl="http://armorgames.com/files/thumbnails"
 _iconextension="gif"
