--- a/sonny2/PKGBUILD
+++ b/sonny2/PKGBUILD
@@ -2,15 +2,13 @@
 
 pkgname=sonny2
 pkgver=2.2
-pkgrel=1
+pkgrel=2
 pkgdesc='Combat based RPG where you play as a Zombie, level up and gain items to advance to the next Zone (Flash game).'
-arch=('i686' 'x86_64')
+arch=('any')
 url='http://armorgames.com/'
 license=('custom')
 makedepends=("imagemagick")
-depends=()
-[ "$CARCH" = i686   ] && depends=('flashplayer-standalone')
-[ "$CARCH" = x86_64 ] && depends=('bin32-flashplayer-standalone')
+depends=('flashplayer-standalone')
 _baseurl="http://armorgames.com/files/games"
 _baseiconurl="http://armorgames.com/files/thumbnails"
 _iconextension="jpg"
