ashd-0.9-1: new upstream release

--- a/ashd/PKGBUILD
+++ b/ashd/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Florian Léger <florian6.leger@laposte.net>
 pkgname=ashd
-pkgver=0.8
+pkgver=0.9
 pkgrel=1
 pkgdesc="A Sane HTTP Daemon."
 arch=(i686 x86_64)
@@ -9,8 +9,8 @@ license=('GPL')
 source=(http://www.dolda2000.com/~fredrik/${pkgname}/${pkgname}-${pkgver}.tar.gz
         ashd
         ashd.conf)
-depends=(gnutls file)
-md5sums=('f9e437bdbf87333166fe9aa20414430f'
+depends=(gnutls file attr)
+md5sums=('131d582645ed54481e7edbb3655b0a11'
          '5611d757b7d4695e721f5cc3600d39b1'
          '2ee675c226fa5396bb65fad1b0035e50')
 backup=(etc/conf.d/ashd.conf etc/ashd/dirplex.rc etc/ashd/apache-compat)
