sd8688-wlan-26609.P64-2: update for linux-3.1

--- a/sd8688-wlan/PKGBUILD
+++ b/sd8688-wlan/PKGBUILD
@@ -3,7 +3,7 @@
 pkgname=sd8688-wlan
 pkgver=26609.P64
 epoch=1
-pkgrel=1
+pkgrel=2
 pkgdesc="WLAN driver for Marvell SD8688 WiFi/BlueTooth chipset."
 arch=('i686' 'x86_64' 'arm')
 url='http://plugcomputer.org/plugwiki/index.php/Setting_GuruPlug_to_be_a_stable_WiFi_Client'
@@ -12,24 +12,25 @@ depends=('linux' 'sd8688-firmware')
 makedepends=('linux-headers' 'gzip')
 install='sd8688-wlan.install'
 source=("http://plugcomputer.org/plugwiki/images/0/05/SD_WLAN.tar.gz"
-        "sd_wlan.diff")
+        "sd_wlan-linux-3.1.diff")
 md5sums=('2f279f30bee27ca52118b931b39a922b'
-         '7851fe80b0a075de4ef678c3d3139d4e')
+         '03606599a4ade1977e9e39935307c38e')
 
-KERNEL_RELEASE="$(uname -r)"
+: ${_extramodules:=extramodules-3.1-ARCH}
+_kernver="$(cat /lib/modules/${_extramodules}/version)"
 
 build() {
   local bArch
-  
+
   cd "${srcdir}"
-  patch -Np1 -i "sd_wlan.diff"
-  cd SD_WLAN/SD-WLAN-BT-8688-LINUX2625-SAAR-10.49.3.p70-26609.P64_B1/wlan_src
+  patch -Np1 -i "sd_wlan-linux-3.1.diff"
+  cd "SD_WLAN/SD-WLAN-BT-8688-LINUX2625-SAAR-10.49.3.p70-26609.P64_B1/wlan_src"
 
   [ x$CARCH = xarm ] && bArch=arm
   [ x$CARCH = xi686 ] || [ x$CARCH = xx86_64 ] && bArch=x86
 
-  make KERNELDIR="/usr/src/linux-$KERNEL_RELEASE" CROSS_COMPILE="" ARCH=$bArch
-  
+  make KERNELDIR="/lib/modules/${_kernver}/build" CROSS_COMPILE="" ARCH=$bArch
+
   gzip -9 "sd8xxx.ko"
   gzip -9 "mcypt.ko"
 }
@@ -37,6 +38,11 @@ build() {
 package() {
   cd "$srcdir/SD_WLAN/SD-WLAN-BT-8688-LINUX2625-SAAR-10.49.3.p70-26609.P64_B1/wlan_src"
 
-  install -Dm644 sd8xxx.ko.gz "$pkgdir/lib/modules/$KERNEL_RELEASE/kernel/drivers/net/wireless/sd8688/sd8xxx.ko.gz"
-  install -Dm644 mcypt.ko.gz "$pkgdir/lib/modules/$KERNEL_RELEASE/kernel/drivers/net/wireless/sd8688/mcypt.ko.gz"
+  install -Dm644 sd8xxx.ko.gz "${pkgdir}/lib/modules/${_extramodules}/sd8xxx.ko.gz"
+  install -Dm644 mcypt.ko.gz "${pkgdir}/lib/modules/${_extramodules}/mcypt.ko.gz"
+
+  # Set correct depmod command for install
+  sed \
+    -e  "s/EXTRA_MODULES=.*/EXTRA_MODULES=${_extramodules}/g" \
+    -i "${startdir}/${pkgname}.install"
 }
